--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".fragment.ProfileFragment">
+    android:gravity="center_horizontal" tools:context=".fragment.ProfileFragment">
 
-    <!-- Tiêu đề -->
     <TextView
         android:id="@+id/tvProfileTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Đây là Profile Fragment (của chung)"
-        android:textSize="20sp"
+        android:text="Thông tin cá nhân"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"/>
 
-    <!-- Nút Logout -->
+    <Button
+        android:id="@+id/btnGoToFavorites"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Danh sách tour yêu thích"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        android:padding="12dp"
+        app:iconGravity="textStart"/>
+
+<!--Log out-->
     <Button
         android:id="@+id/btnLogout"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/purple_500"
-        android:textColor="@android:color/white"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:text="Đăng xuất"
+        android:backgroundTint="@android:color/holo_red_dark" android:textColor="@android:color/white"
         android:textStyle="bold"
+        android:layout_marginTop="16dp"
         android:padding="12dp"/>
-</FrameLayout>
+
+</LinearLayout>
