--- a/app/src/main/res/menu/filter_date_menu.xml
+++ b/app/src/main/res/menu/filter_date_menu.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/sort_date_desc"
+        android:title="Ngày: Mới nhất" />
+    <item
+        android:id="@+id/sort_date_asc"
+        android:title="Ngày: Cũ nhất" />
 </menu>
