--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-</resources>
+    <dimen name="star_size_small">18dp</dimen>   <dimen name="star_margin_small">4dp</dimen>    </resources>
