--- a/app/src/main/res/layout/fragment_guide_tours.xml
+++ b/app/src/main/res/layout/fragment_guide_tours.xml
@@ -17,6 +17,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- ✅ Nút danh sách lời mời -->
+    <ImageButton
+        android:id="@+id/btnInvitations"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_alarm"
+        android:contentDescription="Xem lời mời tour"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+        android:layout_marginEnd="12dp"
+        app:tint="@color/gray" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTours"
         android:layout_width="0dp"
@@ -37,4 +51,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
